--- a/src/CSS Files/MovDetail.css
+++ b/src/CSS Files/MovDetail.css
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     width: 60%;
-    height: fit-content
+    height: fit-content;
 }
 
 .movInfo {
@@ -81,8 +81,9 @@
 .ss {
     display: flex;
     flex-wrap: wrap;
-    width: 480px;
+    width: 460px;
     height: 700px;
+    background: #00000020;
 }
 
 .cast {
@@ -156,6 +157,7 @@
 
     .ss {
         width: 100%;
+        justify-content: center;
         height: fit-content;
     }
 }
