--- a/src/CSS Files/MovDetail.css
+++ b/src/CSS Files/MovDetail.css
@@ -66,6 +66,20 @@
     padding: 5px;
 }
 
+.movInfo span{
+    border: 1px solid gray;
+    margin: 2px;
+    padding: 5px;
+    white-space: nowrap;
+    justify-content: center;
+    align-items: center;
+    display: flex; 
+    gap: 5px;
+    color: white;
+    background: #312d2d;
+    width: fit-content;
+}
+
 .simi {
     display: flex;
     flex-direction: column;
