--- a/src/CSS Files/Movies.css
+++ b/src/CSS Files/Movies.css
@@ -47,7 +47,7 @@
 }
 
 .child {
-    margin: 10px 20px
+    margin: 10px 15px
 }
 
 .child button {
@@ -90,17 +90,20 @@
     height: 320px;
     text-align: center;
     padding: 5px;
-    background-color: rgba(186, 24, 24, 0.232);
+    background-color: #ba18183b;
 }
 
 .detl h5 {
     display: flex;
-    width: fit-content;
-    height: fit-content;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.638);
+    color: white;
+    width: 50px;
     margin: 0px;
-    padding: 5px;
+    position: absolute;
+    top: 5px;
+    left: 5px;
 }
 
 .detl h3 {
@@ -242,4 +245,16 @@
     width: 200px;
     background: white;
     color: black;
+}
+
+.MuiPagination-root button {
+    background: #1c1a1a;
+}
+
+.MuiPaginationItem-root {
+    color: grey !important;
+}
+
+.MuiPaginationItem-root.Mui-selected {
+    background: darkred !important;
 }
