--- a/src/CSS Files/Row.css
+++ b/src/CSS Files/Row.css
@@ -51,18 +51,20 @@
     width: 257px;
     height: 110px;
     overflow: hidden;
-    background-color: rgba(186, 24, 24, 0.232);
+    background-color: #ba18183b;
 }
 
 .details h5{
-    border: 2px solid white;
-    background-color: rgb(178, 35, 35);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.638);
     color: white;
-    width: fit-content;
+    width: 50px;
     margin: 0px;
-    padding: 5px;
     position: absolute;
-    top: 0;
+    top: 0px;
+    left: 0px;
 }
 
 .details h3{
