--- a/src/CSS Files/Flix.css
+++ b/src/CSS Files/Flix.css
@@ -1,6 +1,7 @@
 .bg {
-    display: flex;
     background-image: url(/src/assets/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
 }
