--- a/src/CSS Files/MovDetail.css
+++ b/src/CSS Files/MovDetail.css
@@ -14,11 +14,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin: auto;
+    width: 100%;
+    justify-content: center;
 }
 
 .btn button {
-    width: 228px;
-    height: 60px;
+    width: 140px;
+    height: 50px;
     border-color: transparent;
     border-radius: 10px;
     background-color: rgb(40, 38, 38);
@@ -26,10 +29,12 @@
     margin: 5px;
     cursor: pointer;
     transition: 0.5s;
+    overflow: hidden;
 }
 
 .btn button:hover {
     color: white;
+    overflow: visible;
 }
 
 .info {
@@ -40,11 +45,12 @@
     justify-content: space-between;
 }
 
-.info1{
+.info1 {
     display: flex;
+    width: 60%;
 }
 
-.imge img{
+.imge img {
     width: 300px;
     margin-right: 20px;
     border-radius: 20px;
@@ -54,7 +60,6 @@
 .det {
     display: flex;
     flex-direction: column;
-    width: 60%;
     height: fit-content;
 }
 
@@ -66,14 +71,14 @@
     padding: 5px;
 }
 
-.movInfo span{
+.movInfo span {
     border: 1px solid gray;
     margin: 2px;
     padding: 5px;
     white-space: nowrap;
     justify-content: center;
     align-items: center;
-    display: flex; 
+    display: flex;
     gap: 5px;
     color: white;
     background: #312d2d;
@@ -152,20 +157,18 @@
     color: rgb(78, 75, 75);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 1050px) {
 
     .info {
         display: flex;
         flex-direction: column;
     }
 
-    .info .info1{
+    .info .info1 {
         display: flex;
         flex-direction: column;
-    }
-
-    .det {
         width: 100%;
+        justify-content: center;
         height: fit-content;
     }
 
